optimize google speed page

--- a/src/html/partners.html
+++ b/src/html/partners.html
@@ -4,7 +4,7 @@
 		<ul class="partners__companies">
 			<!-- 1 -->
 			<li class="partners__companies-company" data-scroll data-scroll-speed="1" data-scroll-delay="0.21" data-scroll-direction="horizontal">
-				<a class="partners__companies-link" href="https://www.google.com/chromebook/perks/" target="_blank" rel="nofollow">
+				<a class="partners__companies-link" href="https://www.google.com/chromebook/perks/" target="_blank" rel="nofollow" aria-label="link on the chromebook site">
 					<svg>
 						<use xlink:href="@img/sprites/sprite.svg#googleParthner"></use>
 					</svg>
@@ -12,7 +12,7 @@
 			</li>
 			<!-- 2 -->
 			<li class="partners__companies-company" data-scroll data-scroll-speed="1" data-scroll-delay="0.16" data-scroll-direction="horizontal">
-				<a class="partners__companies-link" href="https://www.lg.com/" target="_blank" rel="nofollow">
+				<a class="partners__companies-link" href="https://www.lg.com/" target="_blank" rel="nofollow" aria-label="link on the LG site">
 					<svg>
 						<use xlink:href="@img/sprites/sprite.svg#lgParthner"></use>
 					</svg>
@@ -20,7 +20,7 @@
 			</li>
 			<!-- 3 -->
 			<li class="partners__companies-company" data-scroll data-scroll-speed="1" data-scroll-delay="0.11" data-scroll-direction="horizontal">
-				<a class="partners__companies-link" href="https://www.amd.com/" target="_blank" rel="nofollow">
+				<a class="partners__companies-link" href="https://www.amd.com/" target="_blank" rel="nofollow" aria-label="link on the AMD site">
 					<svg>
 						<use xlink:href="@img/sprites/sprite.svg#amdParthner"></use>
 					</svg>
@@ -28,7 +28,7 @@
 			</li>
 			<!-- 4 -->
 			<li class="partners__companies-company" data-scroll data-scroll-speed="-1" data-scroll-delay="0.11" data-scroll-direction="horizontal">
-				<a class="partners__companies-link" href="https://www.intel.com/content/www/us/en/customer-spotlight/stories/boosteroid-customer-story.html" target="_blank" rel="nofollow">
+				<a class="partners__companies-link" href="https://www.intel.com/content/www/us/en/customer-spotlight/stories/boosteroid-customer-story.html" target="_blank" rel="nofollow" aria-label="link on the Intel site">
 					<svg>
 						<use xlink:href="@img/sprites/sprite.svg#intel"></use>
 					</svg>
@@ -36,7 +36,7 @@
 			</li>
 			<!-- 5 -->
 			<li class="partners__companies-company" data-scroll data-scroll-speed="-1" data-scroll-delay="0.16" data-scroll-direction="horizontal">
-				<a class="partners__companies-link" target="_blank" href="https://servers.asus.com/stories/Boosteroid-2022" rel="nofollow">
+				<a class="partners__companies-link" target="_blank" href="https://servers.asus.com/stories/Boosteroid-2022" rel="nofollow" aria-label="link on the asus site">
 					<svg>
 						<use xlink:href="@img/sprites/sprite.svg#asus"></use>
 					</svg>
@@ -44,7 +44,7 @@
 			</li>
 			<!-- 6 -->
 			<li class="partners__companies-company" data-scroll data-scroll-speed="-1" data-scroll-delay="0.21" data-scroll-direction="horizontal">
-				<a class="partners__companies-link" href="https://www.nvidia.com" target="_blank" rel="nofollow">
+				<a class="partners__companies-link" href="https://www.nvidia.com" target="_blank" rel="nofollow" aria-label="link on the nvidia site">
 					<svg>
 						<use xlink:href="@img/sprites/sprite.svg#nvidia"></use>
 					</svg>
@@ -52,7 +52,7 @@
 			</li>
 			<!-- 7 -->
 			<li class="partners__companies-company" data-scroll data-scroll-speed="1" data-scroll-delay="0.21" data-scroll-direction="horizontal">
-				<a class="partners__companies-link" href="https://www.philips.com/global" rel="nofollow" target="_blank">
+				<a class="partners__companies-link" href="https://www.philips.com/global" rel="nofollow" target="_blank" aria-label="link on the philips site">
 					<svg>
 						<use xlink:href="@img/sprites/sprite.svg#philips"></use>
 					</svg>
@@ -60,7 +60,7 @@
 			</li>
 			<!-- 8 -->
 			<li class="partners__companies-company" data-scroll data-scroll-speed="1" data-scroll-delay="0.11" data-scroll-direction="horizontal">
-				<a class="partners__companies-link" href="https://global.sharp" rel="nofollow" target="_blank">
+				<a class="partners__companies-link" href="https://global.sharp" rel="nofollow" target="_blank" aria-label="link on the global sharp site">
 					<svg>
 						<use xlink:href="@img/sprites/sprite.svg#sharp"></use>
 					</svg>
@@ -68,7 +68,7 @@
 			</li>
 			<!-- 9 -->
 			<li class="partners__companies-company" data-scroll data-scroll-speed="0" data-scroll-delay="0" data-scroll-direction="horizontal">
-				<a class="partners__companies-link" href="https://en.skyworthdigital.com/news-detail/InfoId/173.html" rel="nofollow" target="_blank">
+				<a class="partners__companies-link" href="https://en.skyworthdigital.com/news-detail/InfoId/173.html" rel="nofollow" target="_blank" aria-label="link on the skyworthdigital site">
 					<svg>
 						<use xlink:href="@img/sprites/sprite.svg#skyworth"></use>
 					</svg>
@@ -76,7 +76,7 @@
 			</li>
 			<!-- 10 -->
 			<li class="partners__companies-company" data-scroll data-scroll-speed="-1" data-scroll-delay="0.11" data-scroll-direction="horizontal">
-				<a class="partners__companies-link" href="https://kivismart.com/en" target="_blank" rel="nofollow">
+				<a class="partners__companies-link" href="https://kivismart.com/en" target="_blank" rel="nofollow" aria-label="link on the kivi site">
 					<svg>
 						<use xlink:href="@img/sprites/sprite.svg#kivi"></use>
 					</svg>
@@ -84,7 +84,7 @@
 			</li>
 			<!-- 11 -->
 			<li class="partners__companies-company" data-scroll data-scroll-speed="-1" data-scroll-delay="0.21" data-scroll-direction="horizontal">
-				<a class="partners__companies-link" href="https://www.binbox.com/?utm_source=boosteroid&utm_medium=logo&utm_campaign=partners" target="_blank" rel="nofollow">
+				<a class="partners__companies-link" href="https://www.binbox.com/?utm_source=boosteroid&utm_medium=logo&utm_campaign=partners" target="_blank" rel="nofollow" aria-label="link on the binbox site">
 					<svg>
 						<use xlink:href="@img/sprites/sprite.svg#binbox"></use>
 					</svg>
