--- a/src/html/section-platform.html
+++ b/src/html/section-platform.html
@@ -12,9 +12,9 @@
 					</div>
 				</div>
 				<div class="platform__price">
-					<h4 class="platform__price-title i18nelement" data-i18n="platform.price">
+					<p class="platform__price-title i18nelement" data-i18n="platform.price">
 						settings high — Prices low
-					</h4>
+					</p>
 					<p class="platform__price-price">
 						<span class="platform__price-price--from i18nelement" data-i18n="platform.price_from">From</span>
 						<span class="platform__price-price--price"><sup>€</sup>7.49</span>
@@ -28,7 +28,7 @@
 				</div>
 			</div>
 			<div class="platform__image">
-				<img loading=lazy src="@img/platform_1.png" alt="image" width="924" height="937">
+				<img src="@img/platform_1.png" alt="image" width="924" height="937">
 			</div>
 		</div>
 	</div>
