--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
 	</div>
 	@@include("html/cookiePopUp.html", {})
 	<div class="banner" style="max-height: 100%;">
-		<button class="banner__button"></button>
+		<button class="banner__button" aria-label="hidden and visible banner"></button>
 		<a href="https://www.instagram.com/p/CaW1tOqsUEx/" target="_blank" class="banner-link">
 			<img loading=lazy class="banner__sm" width="500" height="40" src="@img/banners/banner_sm.jpg" alt="banner">
 			<img loading=lazy class="banner__md" width="992" height="60" src="@img/banners/banner_md.jpg" alt="banner">
