--- a/src/html/power.html
+++ b/src/html/power.html
@@ -6,8 +6,8 @@
 		<div class="power__container" id="fixed-elements">
 			<div class="power__image">
 				<div class="power__image-box" data-scroll data-scroll-sticky data-scroll-target="#fixed-elements">
-					<img class="power__image-box-img power__image-box--sm" loading="lazy" src="@img/power-2.png" alt="background image">
-					<img class="power__image-box-img power__image-box--lg" loading="lazy" src="@img/power-1.png" alt="background image">
+					<img width="280" height="188" class="power__image-box-img power__image-box--sm" loading="lazy" src="@img/power-2.png" alt="background image">
+					<img width="645" height="475" class="power__image-box-img power__image-box--lg" loading="lazy" src="@img/power-1.png" alt="background image">
 				</div>
 			</div>
 
