fix our app page

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
 		"title": "Home"
 	})
 <body class="locked">
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MWNDPQM"
+		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 	<div class="mask">
 		<div class="mask__loader"></div>
