--- a/src/partner-page/index.html
+++ b/src/partner-page/index.html
@@ -153,7 +153,7 @@
 			</nav>
 		</header>
 	
-			<main>
+			<main class="partner-body">
 				@@include("become.html")
 				@@include("youget.html")
 				@@include("looking.html")
