fix meta tag and title tags

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="isAnimate">
 	@@include("html/head.html", {
-		"title": "Home"
+		"title": "Boosteroid Cloud Gaming | Your Games on Any Device 🚀"
 	})
 <body class="locked">
 	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MWNDPQM"
