--- a/src/downloads/index.html
+++ b/src/downloads/index.html
@@ -38,10 +38,10 @@
 								<a href="../faq/" class="header__item-link i18nelement" data-i18n="link.faq">faq</a>
 							</li>
 							<li class="header__item">
-								<a href="https://help.boosteroid.com/en/" class="header__item-link header__item-link--help i18nelement" data-i18n="link.helpcenter">Help center</a>
+								<a href="https://help.boosteroid.com/en/" target="_blank" class="header__item-link header__item-link--help i18nelement" data-i18n="link.helpcenter">Help center</a>
 							</li>
 							<li class="header__item">
-								<a href="https://boosteroid.com/blog/" class="header__item-link header__item-link--blog i18nelement" data-i18n="link.blog">Blog</a>
+								<a href="https://boosteroid.com/blog/" target="_blank" class="header__item-link header__item-link--blog i18nelement" data-i18n="link.blog">Blog</a>
 							</li>
 						</ul>
 
@@ -144,7 +144,7 @@
 							</svg>
 							<span class="i18nelement" data-i18n="global.button_lang">English</span>
 						</button>
-						<a href="https://cloud.boosteroid.com" class="header__buttons-login second-btn i18nelement" data-i18n="link.login">Sign In</a>
+						<a href="https://cloud.boosteroid.com" class="header__buttons-login second-btn i18nelement" data-i18n="link.login" target="_blank">Sign In</a>
 					</div>
 					<div class="burger">
 						<span></span>
