--- a/src/html/partners.html
+++ b/src/html/partners.html
@@ -43,15 +43,9 @@
 				</a>
 			</li>
 			<!-- 6 -->
-			<li class="partners__companies-company" data-scroll data-scroll-speed="-1" data-scroll-delay="0.21" data-scroll-direction="horizontal">
-				<a class="partners__companies-link" href="https://www.nvidia.com" target="_blank" rel="nofollow" aria-label="link on the nvidia site">
-					<svg>
-						<use xlink:href="@img/sprites/sprite.svg#nvidia"></use>
-					</svg>
-				</a>
-			</li>
+			<!-- Delete -->
 			<!-- 7 -->
-			<li class="partners__companies-company" data-scroll data-scroll-speed="1" data-scroll-delay="0.21" data-scroll-direction="horizontal">
+			<li class="partners__companies-company" data-scroll data-scroll-speed="-1" data-scroll-delay="0.21" data-scroll-direction="horizontal">
 				<a class="partners__companies-link" href="https://www.philips.com/global" rel="nofollow" target="_blank" aria-label="link on the philips site">
 					<svg>
 						<use xlink:href="@img/sprites/sprite.svg#philips"></use>
@@ -67,7 +61,7 @@
 				</a>
 			</li>
 			<!-- 9 -->
-			<li class="partners__companies-company" data-scroll data-scroll-speed="0" data-scroll-delay="0" data-scroll-direction="horizontal">
+			<li class="partners__companies-company" data-scroll data-scroll-speed="1" data-scroll-delay="0" data-scroll-direction="horizontal">
 				<a class="partners__companies-link" href="https://en.skyworthdigital.com/news-detail/InfoId/173.html" rel="nofollow" target="_blank" aria-label="link on the skyworthdigital site">
 					<svg>
 						<use xlink:href="@img/sprites/sprite.svg#skyworth"></use>
