--- a/src/faq/index.html
+++ b/src/faq/index.html
@@ -144,7 +144,7 @@
 						</svg>
 						<span class="i18nelement" data-i18n="global.button_lang">English</span>
 					</button>
-					<a href="#" class="header__buttons-login second-btn i18nelement" data-i18n="link.login" target="_blank">Sign In</a>
+					<a href="https://cloud.boosteroid.com/" class="header__buttons-login second-btn i18nelement" data-i18n="link.login" target="_blank">Sign In</a>
 				</div>
 				<div class="burger">
 					<span></span>
