fixed click on burger menu and languages

--- a/src/faq/index.html
+++ b/src/faq/index.html
@@ -47,90 +47,46 @@
 					<div class="header__languages">
 						<span class="close-lang "></span>
 						<p class="i18nelement" data-i18n="link.select">Select Your Language</p>
-						<a class="header__languages-btn" href="#" data-lang="en">
-							<svg>
-								<use href="../@img/sprites/sprite.svg#united_kingdom"></use>
-							</svg>
-							<span>English</span>
-						</a>
-						<!-- <a class="header__languages-btn" href="#" data-lang="fr">
-							<svg>
-								<use href="../@img/sprites/sprite.svg#france"></use>
-							</svg>
-							<span>Français</span>
-						</a> -->
-						<!-- <a class="header__languages-btn" href="#">
-							<svg>
-								<use href="../@img/sprites/sprite.svg#germany"></use>
-							</svg>
-							<span>Deutsche</span>
-						</a> -->
-						<!-- <a class="header__languages-btn" href="#">
-							<svg>
-								<use href="../@img/sprites/sprite.svg#italy"></use>
-							</svg>
-							<span>Italiano</span>
-						</a> -->
-						<a class="header__languages-btn" href="#" data-lang="es">
-							<svg>
-								<use href="../@img/sprites/sprite.svg#spain"></use>
-							</svg>
-							<span>Español</span>
-						</a>
-						<a class="header__languages-btn" href="#" data-lang="ua">
-							<svg>
-								<use href="../@img/sprites/sprite.svg#ukraine"></use>
-							</svg>
-							<span>Українська</span>
-						</a>
-						<a class="header__languages-btn" href="#" data-lang="ro">
-							<svg>
-								<use href="../@img/sprites/sprite.svg#romania"></use>
-							</svg>
-							<span>Română</span>
-						</a>
-						<!-- <a class="header__languages-btn" href="#">
-							<svg>
-								<use href="../@img/sprites/sprite.svg#portugal"></use>
-							</svg>
-							<span>Português</span>
-						</a> -->
-						<!-- <a class="header__languages-btn" href="#">
-							<svg>
-								<use href="../@img/sprites/sprite.svg#serbia"></use>
-							</svg>
-							<span>Srpski</span>
-						</a> -->
-						<!-- <a class="header__languages-btn" href="#">
-							<svg>
-								<use href="../@img/sprites/sprite.svg#poland"></use>
-							</svg>
-							<span>Polski</span>
-						</a> -->
-						<!-- <a class="header__languages-btn" href="#">
-							<svg>
-								<use href="../@img/sprites/sprite.svg#czech_respublic"></use>
-							</svg>
-							<span>Čeština</span>
-						</a> -->
-						<!-- <a class="header__languages-btn" href="#">
-							<svg>
-								<use href="../@img/sprites/sprite.svg#greece"></use>
-							</svg>
-							<span>Ελληνική</span>
-						</a> -->
-						<!-- <a class="header__languages-btn" href="#">
-							<svg>
-								<use href="../@img/sprites/sprite.svg#magyar"></use>
-							</svg>
-							<span>Magyar</span>
-						</a> -->
-						<!-- <a class="header__languages-btn" href="#">
-							<svg>
-								<use href="../@img/sprites/sprite.svg#turkey"></use>
-							</svg>
-							<span>Türkçe</span>
-						</a> -->
+						<div class="header__languages-box">
+							<a class="header__languages-btn" href="#" data-lang="en">
+								<svg>
+									<use href="../@img/sprites/sprite.svg#united_kingdom"></use>
+								</svg>
+								<span>English</span>
+							</a>
+						</div>
+						<div class="header__languages-box">
+							<a class="header__languages-btn" href="#" data-lang="es">
+								<svg>
+									<use href="../@img/sprites/sprite.svg#spain"></use>
+								</svg>
+								<span>Español</span>
+							</a>
+						</div>
+						<div class="header__languages-box">
+							<a class="header__languages-btn" href="#" data-lang="ua">
+								<svg>
+									<use href="../@img/sprites/sprite.svg#ukraine"></use>
+								</svg>
+								<span>Українська</span>
+							</a>
+						</div>
+						<div class="header__languages-box">
+							<a class="header__languages-btn" href="#" data-lang="ro">
+								<svg>
+									<use href="../@img/sprites/sprite.svg#romania"></use>
+								</svg>
+								<span>Română</span>
+							</a>
+						</div>
+						<div class="header__languages-box">
+							<a class="header__languages-btn" href="#" data-lang="pl">
+								<svg>
+									<use href="../@img/sprites/sprite.svg#poland"></use>
+								</svg>
+								<span>Polski</span>
+							</a>
+						</div>
 					</div>
 	
 					<span class="lang-overlay"></span>
@@ -144,6 +100,7 @@
 						</svg>
 						<span class="i18nelement" data-i18n="global.button_lang">English</span>
 					</button>
+					<p class="header__buttons-text i18nelement" data-i18n="link.select">Select Your Language</p>
 					<a href="https://cloud.boosteroid.com/" class="header__buttons-login second-btn i18nelement" data-i18n="link.login" target="_blank">Sign In</a>
 				</div>
 				<div class="burger">
