--- a/src/html/faq.html
+++ b/src/html/faq.html
@@ -93,7 +93,7 @@
 						<p>
 							The browser-based solution we offer is custom that secures low latency,
 							high image quality, and a smooth gaming experience. You can also play games
-							by means of our desktop application for <strong>Windows, Linux, Android, Android TV</strong>.
+							by means of our desktop application for <strong>Windows, Linux, Android, Android TV, macOS</strong>.
 						</p>
 					</div>
 				</div>
@@ -149,7 +149,7 @@
 				<div class="faq__answer">
 					<h4 class="faq__answer-title">Do you have a desktop app?</h4>
 					<div class="faq__answer-text answer-text">
-						<p>Boosteroid supports applications for <strong>Windows, Linux, Android, Android TV</strong>.
+						<p>Boosteroid supports applications for <strong>Windows, Linux, Android, Android TV, macOS</strong>.
 							You can <a href="../downloads/" target="_blank">download</a> the needed application on the
 							website.</p>
 						<p>Note that all the supported desktop applications are currently in beta,
@@ -163,7 +163,7 @@
 				<div class="faq__answer">
 					<h4 class="faq__answer-title">How to sign up?</h4>
 					<div class="faq__answer-text answer-text">
-						<p>Click <strong>Sign In</strong> in the upper-right corner of the Boosteroid website. For more	information, follow	this <a href="https://help.boosteroid.com/en/content/how-to-sign-up-for-boosteroid-A3x0V" target="_blank">link</a>.</p>
+						<p>Click <strong>Sign In</strong> in the upper-right corner of the Boosteroid website. For more	information, follow	this <a href="https://help.boosteroid.com/en/content/how-to-sign-up-for-boosteroid" target="_blank">link</a>.</p>
 					</div>
 				</div>
 
@@ -174,7 +174,7 @@
 						<img src="../@img/faq/speedtest-faq.jpg" alt="Speedtest" width="432" height="auto">
 						<p><i>Note, if you pass the test several times and the results are too different,
 								it's likely that your Internet connection is not stable at the moment. </i></p>
-						<p>For more information, please follow the <a	href="#">link</a>.</p>
+						<p>For more information, please follow the <a href="https://help.boosteroid.com/en/content/how-to-check-my-connection" target="_blank">link</a>.</p>
 					</div>
 				</div>
 
@@ -189,6 +189,7 @@
 							<li>If you use Ethernet, your Wi-Fi router should not	be utilized for streaming, watching, downloading, etc.</li>
 							<li>Ping to Boosteroid servers should be below 20 ms.</li>
 						</ul>
+						<p><i>Note: some users may experience server connection problems while using the IPv6 protocol. We recommend using the IPv4 protocol.</i></p>
 					</div>
 				</div>
 
@@ -197,7 +198,7 @@
 					<div class="faq__answer-text answer-text">
 						<p>
 							You can review the full list of Boosteroid requirements by following this 
-							<a href="https://help.boosteroid.com/en/content/these-are-general-requirements-for-your-digital-environment-K0Rb9" target="_blank">link</a>.
+							<a href="https://help.boosteroid.com/en/content/these-are-general-requirements-for-your-digital-environment" target="_blank">link</a>.
 						</p>
 					</div>
 				</div>
@@ -208,7 +209,7 @@
 						<p>Officially, Boosteroid has no free trial. We recommend you to
 							<a href="https://help.boosteroid.com/en/content/how-to-check-my-connection" target="_blank">check your Internet connection with our servers</a>
 							in the upper-right corner of the website and review our
-							<a href="https://help.boosteroid.com/en/content/these-are-general-requirements-for-your-digital-environment-K0Rb9" target="_blank">general requirements</a></p>
+							<a href="https://help.boosteroid.com/en/content/these-are-general-requirements-for-your-digital-environment" target="_blank">general requirements</a></p>
 					</div>
 				</div>
 
@@ -328,7 +329,7 @@
 				</div>
 
 				<div class="faq__answer">
-					<h4 class="faq__answer-title">Do I need a Boosteroid subscription to play free games? </h4>
+					<h4 class="faq__answer-title">Do I need a Boosteroid subscription to play free games?</h4>
 					<div class="faq__answer-text answer-text">
 						<p>Boosteroid is a paid service. In order to use Boosteroid, you need to have an active
 							subscription.</p>
@@ -355,7 +356,7 @@
 				</div>
 
 				<div class="faq__answer">
-					<h4 class="faq__answer-title">Can I have more than 60 fps? / Can I change the default game settings? </h4>
+					<h4 class="faq__answer-title">Can I have more than 60 fps? / Can I change the default game settings?</h4>
 					<div class="faq__answer-text answer-text">
 						<p>
 							No, you can play games on Boosteroid only with the default settings of 60 fps, Full HD 1080p.
@@ -378,7 +379,7 @@
 							the game process, the correct quitting from the game is not required.</p>
 						<p>
 							For more information, please follow this
-							<a href="https://help.boosteroid.com/en/content/how-does-cloud-synchronisation-work-59PN1" target="_blank">link</a>.
+							<a href="https://help.boosteroid.com/en/content/how-does-cloud-synchronisation-work" target="_blank">link</a>.
 						</p>
 					</div>
 				</div>
@@ -424,10 +425,7 @@
 						The game I want to play is not on the list, where can I propose a video game?
 					</h4>
 					<div class="faq__answer-text answer-text">
-						<p>Follow this <a
-								href="https://docs.google.com/forms/d/e/1FAIpQLScAQSCY2QYVh9HVjojt5EamFu3zmHdZ9zjTW_lEKgCNksY-Cg/viewform" target="_blank">link</a>
-							and write down the name of a video game you want us to consider.
-						</p>
+						<p>You can suggest a game you would like to play on Boosteroid on our Discord server or via the chatbot on our website.</p>
 					</div>
 				</div>
 
@@ -440,7 +438,7 @@
 							<b>My account </b> &gt; <b>My subscription</b> &gt; <b>Plan details</b>.
 						</p>
 						<p>For more information, please take a look at this <a
-								href="https://help.boosteroid.com/en/content/how-to-cancel-my-subscription-RSUTk" target="_blank">article</a>.</p>
+								href="https://help.boosteroid.com/en/content/how-to-cancel-my-subscription" target="_blank">article</a>.</p>
 					</div>
 				</div>
 
@@ -456,7 +454,7 @@
 				<div class="faq__answer">
 					<h4 class="faq__answer-title">I forgot to cancel my subscription</h4>
 					<div class="faq__answer-text answer-text">
-						<p>As per <a href="https://boosteroid.fra1.digitaloceanspaces.com/media/terms_of_use.pdf" target="_blank">Terms of Use</a>,
+						<p>As per <a href="https://boosteroid.com/terms" target="_blank">Terms of Use</a>,
 							we offer no refund for the automatic renewal of a Boosteroid subscription.</p>
 					</div>
 				</div>
@@ -464,7 +462,7 @@
 				<div class="faq__answer">
 					<h4 class="faq__answer-title">I don't like Boosteroid, can I have a refund?</h4>
 					<div class="faq__answer-text answer-text">
-						<p>As per our <a href="https://boosteroid.fra1.digitaloceanspaces.com/media/terms_of_use.pdf" target="_blank">Terms of Use</a>,
+						<p>As per our <a href="https://boosteroid.com/terms" target="_blank">Terms of Use</a>,
 							we provide no refund as soon as a Boosteroid
 							subscription is purchased and used. </p>
 					</div>
