--- a/src/html/head.html
+++ b/src/html/head.html
@@ -32,4 +32,5 @@
 	</script>
 	<title>@@title</title>
 	<meta name="description" content="No need to download and update games. Run your games in browser on Windows, Android, macOS, iOS, Linux, or get our apps. Any subscription gives you unlimited gaming time.">
+	<meta name="keywords" content="cloud gaming, online gaming">
 </head>
