--- a/src/html/secondPages/download.html
+++ b/src/html/secondPages/download.html
@@ -48,10 +48,24 @@
 							</span>
 							<span class="btn-with-icon__name">
 								<span class="i18nelement" data-i18n="global.download_for">Download for</span>
-								<span>macOS</span>
+								<span>macOS (Intel)</span>
 							</span>
 						</a>
 						<p class="download__desktop-undertxt">macOS 10.13.6+</p>
+					</li>
+ 					<li class="download__desktop-item">
+						<a href="https://boosteroid.com/macos_ARM/installer/boosteroid-install-arm64.dmg" class="download__desktop-link btn-with-icon" target="_blank">
+							<span class="btn-with-icon__icon">
+								<svg>
+									<use href="../@img/sprites/sprite.svg#btnApple"></use>
+								</svg>											
+							</span>
+							<span class="btn-with-icon__name">
+								<span class="i18nelement" data-i18n="global.download_for">Download for</span>
+								<span>macOS (M1/M2)</span>
+							</span>
+						</a>
+						<p class="download__desktop-undertxt">macOS 11+</p>
 					</li>
 					<li class="download__desktop-item">
 						<a href="https://boosteroid.com/linux/installer/boosteroid-install-x64.deb" class="download__desktop-link btn-with-icon" target="_blank">
@@ -130,18 +144,35 @@
 					</div>
 					<div class="download__tv-box">
 						<h4 class="download__tv-title">TV</h4>
-						<a href="https://play.google.com/store/apps/details?id=com.boosteroidtv.streaming" class="download__tv-link btn-with-icon" target="_blank">
-							<span class="btn-with-icon__icon">
-								<svg>
-									<use href="../@img/sprites/sprite.svg#btnAndroid"></use>
-								</svg>
-							</span>
-							<span class="btn-with-icon__name">
-								<span class="i18nelement" data-i18n="global.download_for">Download for</span>
-								<span>Android TV</span>
-							</span>
-						</a>
-						<p class="download__tv-undertxt">Version 8+</p>
+						<ul class="download__tv-box-list">
+							<li class="download__tv-box-item">
+								<a href="https://play.google.com/store/apps/details?id=com.boosteroidtv.streaming" class="download__tv-link btn-with-icon" target="_blank">
+									<span class="btn-with-icon__icon">
+										<svg>
+											<use href="../@img/sprites/sprite.svg#btnAndroid"></use>
+										</svg>
+									</span>
+									<span class="btn-with-icon__name">
+										<span class="i18nelement" data-i18n="global.download_for">Download for</span>
+										<span>Android TV</span>
+									</span>
+								</a>
+								<p class="download__tv-undertxt">Version 8+</p>
+							</li>
+							<li class="download__tv-box-item">
+								<a href="https://hello.webos/change-me" class="download__tv-link btn-with-icon" target="_blank">
+									<span class="btn-with-icon__icon">
+										<svg>
+											<use href="../@img/sprites/sprite.svg#btnLG"></use>
+										</svg>
+									</span>
+									<span class="btn-with-icon__name">
+										<span class="i18nelement" data-i18n="global.download_for">Download for</span>
+										<span>WebOS</span>
+									</span>
+								</a>
+							</li>
+						</ul>
 					</div>
 				</div>
 				<!-- <p class="download__paragraph">
