--- a/src/html/unlimited.html
+++ b/src/html/unlimited.html
@@ -132,6 +132,19 @@
 										</span>
 									</a>
 								</li>
+								<li class="devices__item">
+									<a href="https://ua.lgappstv.com/main/tvapp/detail?appId=1202498" target="_blank" class="devices__item-link btn-with-icon">
+										<span class="btn-with-icon__icon icon-android">
+											<svg>
+												<use href="@img/sprites/sprite.svg#btnLG"></use>
+											</svg>
+										</span>
+										<span class="btn-with-icon__name">
+											<span class="i18nelement" data-i18n="global.download_for">Download for</span>
+											<span class="i18nelement">webOS</span>
+										</span>
+									</a>
+								</li>
 							</ul>
 							<!-- <div class="devices__description">
 								<p class="i18nelement" data-i18n="unlimited.tab3_look">Look for Boosteroid App in your <span>Samsung</span> and <span>LG</span> application stores</p>
@@ -261,17 +274,17 @@
 				</p>
 			</li> -->
 
-			<!-- <li class="unlimited__footer-item">
+			<li class="unlimited__footer-item">
 				<p class="unlimited__footer-item-img">
 					<svg>
 						<use href="@img/sprites/sprite.svg#LG"></use>
 					</svg>
 				</p>
 				<p class="unlimited__footer-item-txt">
-					<span>WebOS</span>
-					<span class="unlimited__footer--lg">LG TV App</span>
+					<span>webOS</span>
+					<span class="i18nelement" data-i18n="global.webos">TV App</span>
 				</p>
-			</li> -->
+			</li>
 		</ul>
 	</div>
 </section>
