--- a/src/partner-page/interested.html
+++ b/src/partner-page/interested.html
@@ -9,7 +9,7 @@
 				<p class="interested__txt js-scroll">Fill in the form to get your	FREE HOURS to play</p>
 				<p class="interested__txt js-scroll">You will also receive more details about this offer and the link to register in our partners program!</p>
 			</div>
-			<form class="interested__form" action="https://formspree.io/f/xjvdwpwd" method="POST" target="_blank">
+			<form class="interested__form" action="https://formspree.io/f/mwkjaaoa" method="POST" target="_blank">
 				<p class="interested__popup"></p>
 				<div class="interested__request">
 					<svg>
